 - Make sure that Sqlite3 statements with quotes are double-escaped to
   prevent SQL injections.
 - Fix database check in src/include/main.h, thx to @Christian Barthel.
 - Improved error handling in multiple locations.
 - Tried clang instead of gcc, just for fun. Seems to work if you
   just replace "gcc" with "clang" in Makefile.inc. Note that clang is
   not officially supported.
MISC:
 - Updated SBo script to work with v. 2.1.3; fixed bug that made
   /usr/doc/wendzelnntpd-$ver/docs inaccessible (+x permission was
   missing)
 - Shifted manpages to docs/
 - Prevent usernames with non-alphanumeric characters and newsgroups
   with non-alphanumeric/./- letters.
 - Whitespacing cleanup (thanks to @Christian Barthel for providing a
   patch!)
 - configure script enhancements and cleanup (thanks to @Christian
   Barthel for providing a patch!)

2.1.3-stable "Friedrichroda" : 17-Apr-2021:
 As usual, every new release gets named after a nice travel location.
 This time it is Friedrichroda, Germany.
FIXES:
 - Do not exit on SIG_PIPE (broken pipe) *** security fix (DoS) ***.
    This would be exploitable easily by "echo | telnet hostname port"!
    The fix requires support for the send() flag MSG_NOSIGNAL. Seems
    to be present in *BSD and Linux (at least).
 - Modified regex checks during POST command:
   - Prevent postings to Newsgroups: ,,,
   - Prevent sender '@'
   - Prevent \r\n\t in subjects
   - Unified structure of regex tests with macros
 - Minor fix in documentation for ACL management.
ADDED FEATURES:
 - Created the manpages `wendzelnntpd(8)` and `wendzelnntpadm(8)`.
 - The make target "install" now installs manpages, too.
MISC:
 - Listen on ::1 per default, too (in addition to 127.0.0.1).
 - Slackware build script does not require `make install` anymore,
   which makes the whole process much cleaner. Also, this is quicker.
 - Added additional meta-data for Slackbuild.com compatibility (beta).