@@ -7,3 +7,7 @@ Contributors:
   - **TODO** Christoph Grill: Added support for TLS (NNTPS/STARTTLS)
   - Christian Barthel: Postgres support (2023), currently experimental, and code clean-up
   - @deavmi: clean-up and fixes of the documentation (2018-2019)
+
+Additional patches by:
+  - Michael Baeuerle (NetBSD pkgsrc)
+
