@@ -19,7 +19,22 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+/* NetBSD compatibility; taken from patch by Michael Baeuerle
+ * see: https://github.com/jgoerzen/libnbcompat */
+#if defined(HAVE_NBCOMPAT_H)
+	#include <nbcompat/config.h>    /* Needed for the other headers */
+	#include <nbcompat/cdefs.h>     /* Needed for the other headers */
+	#include <nbcompat/err.h>
+#else
+	#include <err.h>
+#endif
+
 #include "main.h"
+
+/* Lexer generated by flex */
+extern int yylex(void);
+/* Parser generated by bison */
+int yyparse(void);
 
 extern char *yytext;
 extern FILE *yyin;
